fix: Search bar placeholder text was barely readable in glass theme

--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ input::-webkit-search-cancel-button:hover {
 }
 
 .searchbox-style-glass>:nth-child(1)::placeholder {
-	color: #75757586;
+	color: #ffffff86;
 }
 
 .searchbox-style-glass>:nth-child(1) {
